<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/widget_margin_top"
    android:layout_marginBottom="@dimen/widget_margin_bottom"
    android:layout_marginLeft="@dimen/widget_margin_left"
    android:layout_marginRight="@dimen/widget_margin_right"
    android:background="@drawable/bkg_main">
    <!-- We define separate margins to allow for flexibility in twiddling the margins
         depending on device form factor and target SDK version. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
	    android:layout_marginTop="@dimen/widget_margin_top"
        android:orientation="horizontal" >

        <TextView
		    android:id="@+id/l_area"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/Text"
		    android:text="@string/label_area" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
		    android:id="@+id/l_aqi_descript"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/Text.Larger"
		    android:text="@string/label_descript" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

	    <FrameLayout
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:padding="5dp"
			android:background="@drawable/rounded_frame">
	        <TextView
			    android:id="@+id/l_aqi"
			    style="@style/Text.Largest"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/label_aqi" />
   		</FrameLayout>
	        
   	</LinearLayout>

	<!-- NOTE: GridLayout cannot deal with the equal column width problem yet. Use LinearLayout instead.
		http://stackoverflow.com/questions/10016343/gridlayout-not-gridview-how-to-stretch-all-children-evenly -->
	<!-- NOTE: Space control is not allowed in a AppWidget -->
    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="4"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:layout_marginLeft="@dimen/widget_margin_left"
    	android:layout_marginRight="@dimen/widget_margin_right"
        android:orientation="vertical">
	    
   	    <LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:orientation="vertical"
			android:background="@drawable/rounded_frame">
	        
	        <!-- 1st line -->
	   	    <LinearLayout
			    android:layout_width="match_parent"
				android:layout_height="0dp"
		        android:layout_weight="3"
			    android:orientation="horizontal">
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="3"
				    android:layout_height="match_parent"/>
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="4"
				    android:layout_height="match_parent"
					android:gravity="center"
		            style="@style/Text.Smallest" 
		            android:text="@string/label_1h_average" />
		        <TextView 
		            android:layout_width="0dp"
		            android:layout_weight="4"
				    android:layout_height="match_parent"
					android:gravity="center"
		            style="@style/Text.Smallest" 
		            android:text="@string/label_24h_average" />
		    </LinearLayout>    
	        
	        <!-- 2nd line -->
	   	    <LinearLayout
			    android:layout_width="match_parent"
				android:layout_height="0dp"
		        android:layout_weight="7"
			    android:orientation="horizontal">
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="3"
				    android:layout_height="match_parent"
					android:gravity="center"
		            style="@style/Text.Smallest" 
		            android:text="@string/label_pm2_5" />
		        <TextView
				    android:id="@+id/l_pm2_5"
		            android:layout_width="0dp"
		            android:layout_weight="4"
				    android:layout_height="match_parent"
					android:gravity="center"
				    style="@style/Text"
				    android:text="111" />
		        <TextView
				    android:id="@+id/l_pm2_5_24h"
		            android:layout_width="0dp"
		            android:layout_weight="4"
				    android:layout_height="match_parent"
					android:gravity="center"
				    style="@style/Text"
				    android:text="111" />
		    </LinearLayout>    
	   	    		        	        
	    </LinearLayout>    
	   	
   	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
	    android:gravity="center"
	    android:layout_marginBottom="@dimen/widget_margin_bottom"
        android:orientation="horizontal">

        <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/Text.Smallest"
		    android:textColor="@color/light_grey"
		    android:text="@string/label_publish_date" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
		    android:id="@+id/l_date"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/Text.Smallest"
		    android:textColor="@color/light_grey"
		    android:text="@string/label_publish_date_value" />
        
   	</LinearLayout>

</LinearLayout>
