<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/widget_margin_top"
    android:layout_marginBottom="@dimen/widget_margin_bottom"
    android:layout_marginLeft="@dimen/widget_margin_left"
    android:layout_marginRight="@dimen/widget_margin_right"
    android:background="@drawable/bkg_main_small">
    <!-- We define separate margins to allow for flexibility in twiddling the margins
         depending on device form factor and target SDK version. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
	    android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
		    android:id="@+id/l_area"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/Text.Mediumn"
		    android:text="@string/label_area" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <TextView
		    android:id="@+id/l_aqi_descript"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/Text.Larger"
		    android:text="@string/label_descript" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

	    <FrameLayout
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:padding="5dp"
			android:background="@drawable/rounded_frame">
	        <TextView
			    android:id="@+id/l_aqi"
			    style="@style/Text.Largest"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/label_aqi" />
   		</FrameLayout>
	         
   	</LinearLayout>

</LinearLayout>
